chore(error-handling,outbox): add standardized exceptions and enhance outbox dispatcher
- Added structured application exceptions with global handling
- Standardized API error responses with requestId support
- Improved outbox dispatcher logic and reliability